# googol

./: .dockerignore  .env.example  .gitignore  AGENTIC_TWO_TIER_ARCHITECTURE.md  ARCHITECTURE.md  DEMO.md  Dockerfile.backend  Dockerfile.frontend  Dockerfile.old  EXPLANATION.md  FINAL_SUMMARY.md  FLAG_FEATURE_SUMMARY.md  INTEGRATION_SUMMARY.md  README.md  TEST.sh  docker-compose.yml  environment.yml  install.sh  migrate_database.sh  pyproject.toml  requirements-backend.txt  requirements-core.txt  requirements-dicom.txt  requirements-frontend.txt  requirements.txt  run_backend.sh  run_frontend.sh  test_agentic_pipeline.py  test_bulletproof_pipeline.py
.claude/: BULLETPROOF_PIPELINE.md  DEMO_GUIDE.md  DOCKER_MIGRATION.md  MEDGEMMA_SETUP.md  PROJECT_SETUP.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  TEAM_TASKS.md  UV_SETUP.md
.github/workflows/: ci.yml
DB/: agentic_repository.py  annotations.db-shm  annotations.db-wal  annotations.db.backup  db_schema.sql  repository.py  setup_database.py  setup_database.sh  sqlite_install.sh
app/: main.py
app/components/: image.py
cloud_api/: cloud_api.py  cloud_api_instructions.md  requirements.txt
data/: README.md
docs/diagrams/: archetecture.txt
eval/: eval_runner.py  evaluate_rag.py
src/: __init__.py  annotate_main.py  config.py  dicom_main.py  main.py  schemas.py
src/agent/: __init__.py  agent.py  coordinator.py  executor.py  gemini_agent.py  gemini_enhancer.py  planner.py  summary_generator.py
src/api/: __init__.py  main.py
src/core/: executor.py  memory.py  planner.py
src/data/tcia_presentation_dat/TCGA-BP-4989/82278/59756/: 1.dcm  10.dcm  11.dcm  12.dcm  13.dcm  14.dcm  15.dcm  16.dcm  17.dcm  18.dcm  19.dcm  2.dcm  20.dcm  21.dcm  22.dcm  23.dcm  24.dcm  25.dcm  26.dcm  27.dcm  28.dcm  29.dcm  3.dcm  30.dcm  31.dcm  32.dcm  33.dcm  34.dcm  35.dcm  36.dcm  37.dcm  38.dcm  39.dcm  4.dcm  40.dcm  41.dcm  42.dcm  43.dcm  44.dcm  45.dcm  (+52 more)
src/llm/: gemini_client
src/memory/: vector_store.py
src/models/: __init__.py  db_serializers.py  summary_models.py
src/pipeline/: async_ingest.py
src/pipelines/: __init__.py  agentic_annotation_pipeline.py  annotation_pipeline.py  validation_pipeline.py
src/test_data/: output.dcm
src/tools/: __init__.py  base.py  clinical_chatbot_tool.py  dicom_download_tool.py  dicom_ontology_llm_tool.py  dicom_ontology_presenter.py  dicom_vector_index_tool.py  download_tool.py  gemini_client.py  image_to_dicom.py  medgemma_tool.py  medical_chatbot_tool.py  metadata_tool.py  search_tool.py  test.py  vector_store_tool.py  vector_tool.py
src/ui/: __init__.py  api_client.py  app.py
src/ui/components/: image.py
src/utils/: config.py  logger.py  metadata.py
tests/: test_basic.py  test_ontology_explanation.py  test_vector_index.py
