[project]
name = "medannotator"
version = "1.0.0"
description = "AI-Powered Medical Image Annotation Tool"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Team Googol", email = "rkovashikawa@gmail.com"}
]
keywords = ["medical", "ai", "annotation", "gemini", "healthcare"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    # Core Dependencies
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "streamlit==1.41.1",
    "python-multipart==0.0.20",

    # Google AI
    "google-generativeai==0.8.3",
    "google-cloud-aiplatform==1.75.0",

    # Image Processing
    "Pillow==11.0.0",
    "opencv-python==4.10.0.84",

    # Data Handling
    "pydantic==2.10.5",
    "pydantic-settings==2.7.0",
    "python-dotenv==1.0.1",

    # Utilities
    "aiofiles==24.1.0",
    "httpx==0.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "black==24.10.0",
    "flake8==7.1.1",
    "mypy==1.13.0",
]

[project.urls]
Homepage = "https://github.com/your-username/googol"
Documentation = "https://github.com/your-username/googol#readme"
Repository = "https://github.com/your-username/googol"
Issues = "https://github.com/your-username/googol/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "black>=24.10.0",
    "flake8>=7.1.1",
    "mypy>=1.13.0",
]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
