[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dicom-agent-framework"
version = "0.1.0"
description = "Agentic AI framework for DICOM ingestion, vector search, ontology reasoning, and RAG"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }

authors = [
  { name = "Your Name", email = "you@email.com" }
]

keywords = [
  "DICOM",
  "Healthcare AI",
  "Medical Imaging",
  "RAG",
  "Vector Database",
  "Ontology",
  "Agentic AI"
]

dependencies = [
  "pydicom>=2.4.4",
  "numpy>=1.24",
  "faiss-cpu>=1.7.4",
  "sentence-transformers>=2.6.0",
  "google-generativeai>=0.5.0",
  "nbiatoolkit>=1.0.0",
  "asyncio",
  "tqdm"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff",
  "black",
  "mypy"
]

[project.urls]
Homepage = "https://github.com/YOUR_ORG/dicom-agent-framework"
Repository = "https://github.com/YOUR_ORG/dicom-agent-framework"
Issues = "https://github.com/YOUR_ORG/dicom-agent-framework/issues"

[tool.setuptools.packages.find]
where = ["src"]
